<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/relativelayout">
    
    <ImageView 
        android:id="@+id/login_picture"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/login_picture_bg"
        android:contentDescription="@string/app_name"
        android:src="@drawable/flag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>
    
    <RelativeLayout 
        android:id="@+id/rl_user"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/login_picture">
    <LinearLayout
        android:id="@+id/ll_user_info"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/lbs_popup_bg"
        android:orientation="vertical">
        <LinearLayout 
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView 
                android:id="@+id/login_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_user"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="5dp"
                 />  
        	<EditText
            	android:id="@+id/account"
            	android:layout_height="50dp"
            	android:layout_width="match_parent"
            	android:padding="5dp"
            	android:inputType="text"
            	android:hint="@string/et_account_hint"
            	android:background="@drawable/login_et_bg"
            	android:layout_margin="2dp"/>
        </LinearLayout>
        <View 
            android:layout_height="0.5dp"
            android:layout_width="match_parent"
            android:background="@color/devide_line"/>
        <LinearLayout 
            android:id="@+id/linearlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        	<ImageView 
                android:id="@+id/login_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_key"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="5dp"
                /> 
        	<EditText 
            	android:id="@+id/password"
            	android:layout_height="50dp"
            	android:layout_width="match_parent"
            	android:padding="5dp"
            	android:inputType="textPassword"
            	android:hint="@string/et_password_hint"
            	android:background="@drawable/login_et_bg"
            	android:layout_margin="2dp"/>
      	</LinearLayout>
    </LinearLayout>
    
    <Button 
        android:id="@+id/login"
        android:layout_height="45dp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:layout_below="@id/ll_user_info"
        android:background="@drawable/login_change"
        android:textColor="@android:color/white"/>
    
    <TextView 
       	android:id="@+id/register"
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:text="@string/register"
        android:gravity="center"
        android:layout_below="@id/login"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textColor="#018e7d"
        android:textSize="20sp"/>
   
    </RelativeLayout>
    
</RelativeLayout>
