<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearlayout" >
    
	<LinearLayout 
     	android:layout_width="match_parent"
    	android:layout_height="wrap_content"  
    	android:orientation="vertical" 
        >
        <RelativeLayout
        	android:layout_width="fill_parent"
        	android:layout_height="50dp"
        	android:background="#018e7d"
        	android:orientation="horizontal" >

        	<ImageButton
            	android:id="@+id/add_back"
            	android:layout_width="25dp"
            	android:layout_height="25dp"
            	android:layout_centerVertical="true"
            	android:layout_marginLeft="10dp"
            	android:layout_marginTop="1dp"
            	android:background="@drawable/persion_back"
             />

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_centerInParent="true"
           		android:text="@string/app_name"
            	android:textColor="@android:color/white"
            	android:textSize="20dp" />
        
        	<TextView
                android:id="@+id/update"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"  
        		android:layout_marginRight="10dip"      	     	
        		android:scaleType="matrix"
        		android:text="保存"
        		android:textColor="#ffffff"
        		android:textSize="18dp"
        		android:layout_centerVertical="true"
        		android:layout_alignParentRight="true"
        	 />
    	</RelativeLayout>
    </LinearLayout>
    
	<EditText
        android:id="@+id/password"
        android:numeric="integer"
        android:maxLength="11"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="@string/phone"
        android:background="@drawable/update_phone"/>
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/gray_font"
        android:textSize="16sp"
        android:text="@string/tv_tips_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
