<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:id="@+id/first"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#018e7d"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/menu_imgbtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/infor"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20dp" />
        
    </RelativeLayout>
    
   	
    
	<FrameLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" >

    	<com.amap.api.maps.MapView
       		android:id="@+id/map"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent" >
    	</com.amap.api.maps.MapView>

   	 	<RadioGroup
        	android:id="@+id/gps_radio_group"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="top|left"
        	android:layout_marginLeft="10dp"
        	android:layout_marginTop="10dp"
        	android:background="@color/grey"
        	android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/gps_locate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gpslocate"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/gps_follow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpsfollow"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/gps_rotate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpsrotate"
            android:textColor="@android:color/black" />
   	 	</RadioGroup>

	
	</FrameLayout>
	   	 	
   	 	<ViewFlipper 
        android:id="@+id/flipper" 
        android:layout_gravity="bottom|left"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" />
		<LinearLayout 
		    android:layout_gravity="bottom|left"
        android:orientation="horizontal" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
     	android:layout_alignParentBottom="true" 
     	style="@android:style/ButtonBar"> 
     	<Button 
         	android:id="@+id/searchBtn" 
         	android:background="#FF9900" 
         	android:text="按钮1"
         	android:layout_width="wrap_content" 
         	android:layout_height="wrap_content"
         	android:layout_weight="1"/> 
    	 <Button 
    	     android:id="@+id/historyBtn" 
    	     android:background="#FF9900"
    	     android:text="按钮2"
    	     android:layout_marginLeft="5dp" 
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content" 
    	     android:layout_weight="1" /> 
    </LinearLayout> 
	

</LinearLayout>